--- a/Audacia.Templating.Typescript/Audacia.Templating.Typescript.csproj
+++ b/Audacia.Templating.Typescript/Audacia.Templating.Typescript.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <Version>2.1.0.0</Version>
+    <Authors>Adam Drewery</Authors>
+    <Company>Audacia</Company>
+    <PackageIconUrl>https://girnka-dm2305.files.1drv.com/y4mUfw_5APiy6YhvPidloaNkO5IMUh4GTX222ecazimKACSrlsUoptXi3WHjmHmPtDIxhjfcG0AJHcQ4NDxm4tA13PEBjzjoEnKm5hcoNzxS1i6um3cBaB0o9AMT3PXAULs9utk0wG6YP7tmUmQ_UTSaiG9mNEcXM_t1_Eiguvs1XeaIKBjbb_WF8hTUMzmwY_pGG8BuM9CDcu7tpW2oxK7fw</PackageIconUrl>
+    <Description>Utilities for generating typescript types from C# libraries.</Description>
+    <Copyright>Copyright © Audacia 2017</Copyright>
+  </PropertyGroup>
 
 </Project>
