Add test for enum

--- a/Audacia.Templating.Typescript.Build/config.json
+++ b/Audacia.Templating.Typescript.Build/config.json
@@ -1,11 +1,11 @@
 {
-    "Jasper.Core": { 
-      "namespaces": [ "Jasper", "Jasper.Interfaces", "Jasper.ComputedFields" ],
-      "output": [ "ClientApp/App/entities.ts" ]
-    },
-      
-    "Jasper.Common": { 
-      "namespaces": [ "Jasper.Common" ],
-      "output": [ "ClientApp/App/entities.ts" ]
-    }
+  "../Jasper.Core/bin/Debug/netstandard2.0/Jasper.Core.dll": {
+    "namespaces": [ "Jasper", "Jasper.Interfaces", "Jasper.ComputedFields" ],
+    "output": [ "../Jasper.Ui/ClientApp/App/entities.ts" ]
+  },
+
+  "../Jasper.Common/bin/Debug/netstandard2.0/Jasper.Common.dll": {
+    "namespaces": [ "Jasper.Common" ],
+    "output": [ "../Jasper.Ui/ClientApp/App/models.ts" ]
+  }
 }
