--- a/Audacia.Templating.Typescript.Tests/Audacia.Templating.Typescript.Tests.csproj
+++ b/Audacia.Templating.Typescript.Tests/Audacia.Templating.Typescript.Tests.csproj
@@ -31,6 +31,9 @@
 	  <None Update="typescriptFile.ts">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="enum.ts">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
