--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
@@ -3,6 +3,10 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<OutputType>Exe</OutputType>
+		<AssemblyVersion>2.1.0.0</AssemblyVersion>
+		<Version>2.1.0.0</Version>
+		<Authors>Adam Drewery</Authors>
+		<Company>Audacia</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
