--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.nuspec
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.nuspec
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>$id$</id>
-    <title>$title$</title>
-    <owners>$author$</owners>
+    <id>Audacia.Templating.Typescript.Build</id>
+    <title>Audacia.Templating.Typescript.Build</title>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <Version>2.1.0.0</Version>
+    <owners>Adam Drewery</owners>
+    <Company>Audacia</Company>
     <iconUrl>https://girnka-dm2305.files.1drv.com/y4mUfw_5APiy6YhvPidloaNkO5IMUh4GTX222ecazimKACSrlsUoptXi3WHjmHmPtDIxhjfcG0AJHcQ4NDxm4tA13PEBjzjoEnKm5hcoNzxS1i6um3cBaB0o9AMT3PXAULs9utk0wG6YP7tmUmQ_UTSaiG9mNEcXM_t1_Eiguvs1XeaIKBjbb_WF8hTUMzmwY_pGG8BuM9CDcu7tpW2oxK7fw</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
