--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
@@ -2,8 +2,9 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<AssemblyVersion>2.1.0.0</AssemblyVersion>
 		<Version>2.1.0.0</Version>
+		<AssemblyVersion>2.1.0.0</AssemblyVersion>
+		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
 		<Authors>Adam Drewery</Authors>
 		<Company>Audacia</Company>
 		<TargetFramework>netcoreapp2.0</TargetFramework>
