--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.nuspec
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.nuspec
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>$id$</id>
+    <id>Audacia.Templating.Typescript.Build</id>
+    <version>0.0.0</version>
     <title>Audacia.Templating.Typescript.Build</title>
-    <owners>Adam Drewery</owners>
-    <Company>Audacia</Company>
+    <owners>Audacia</owners>
+    <authors>Adam Drewery</authors>
     <iconUrl>https://girnka-dm2305.files.1drv.com/y4mUfw_5APiy6YhvPidloaNkO5IMUh4GTX222ecazimKACSrlsUoptXi3WHjmHmPtDIxhjfcG0AJHcQ4NDxm4tA13PEBjzjoEnKm5hcoNzxS1i6um3cBaB0o9AMT3PXAULs9utk0wG6YP7tmUmQ_UTSaiG9mNEcXM_t1_Eiguvs1XeaIKBjbb_WF8hTUMzmwY_pGG8BuM9CDcu7tpW2oxK7fw</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
+    <description>Provides build-time C#-Typescript transpiling functionality.</description>
     <copyright>Copyright 2018</copyright>
   </metadata>
   <files>
