--- a/Audacia.Templating.Typescript.Tests/Audacia.Templating.Typescript.Tests.csproj
+++ b/Audacia.Templating.Typescript.Tests/Audacia.Templating.Typescript.Tests.csproj
@@ -2,6 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<Version>2.1.0.0</Version>
+		<AssemblyVersion>2.1.0.0</AssemblyVersion>
+		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
