--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
@@ -8,8 +8,25 @@
 		<Authors>Adam Drewery</Authors>
 		<Company>Audacia</Company>
 		<TargetFramework>netcoreapp2.0</TargetFramework>
-		<NuspecFile>Audacia.Templating.Typescript.Build.nuspec</NuspecFile>
 	</PropertyGroup>
+
+	<!-- Pack settings -->
+	<PropertyGroup>
+		<NoPackageAnalysis>true</NoPackageAnalysis>
+		<NuspecFile>Audacia.Templating.Typescript.Build.nuspec</NuspecFile>
+		<IntermediatePackDir>$(MSBuildProjectDirectory)/bin/$(Configuration)/publish/</IntermediatePackDir>
+		<PublishDir>$(IntermediatePackDir)$(TargetFramework)/</PublishDir>
+		<NuspecProperties>publishDir=$([MSBuild]::NormalizeDirectory($(IntermediatePackDir)))</NuspecProperties>
+	</PropertyGroup>
+
+	<!-- Executes /t:Publish for all target frameworks before packing-->
+	<Target Name="PublishAll" BeforeTargets="GenerateNuspec">
+		<ItemGroup>
+			<_TargetFramework Include="$(TargetFrameworks)" />
+		</ItemGroup>
+		<MSBuild Projects="$(MSBuildProjectFullPath)" Targets="Publish" Properties="TargetFramework=%(_TargetFramework.Identity)" />
+	</Target>
+
 	
 	<ItemGroup>
 	  <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
