--- a/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
+++ b/Audacia.Templating.Typescript.Build/Audacia.Templating.Typescript.Build.csproj
@@ -7,7 +7,7 @@
 		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
 		<Authors>Adam Drewery</Authors>
 		<Company>Audacia</Company>
-		<TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+		<TargetFramework>netcoreapp2.0</TargetFramework>
 	</PropertyGroup>
 
 	<!-- Pack settings -->
