--- a/Audacia.Templating.Typescript.Build/GenerateTypescript.targets
+++ b/Audacia.Templating.Typescript.Build/GenerateTypescript.targets
@@ -1,7 +1,7 @@
 <!-- GenerateTypescript.targets -->
 <Project>
 	<PropertyGroup>
-		<TsGenFileExe>dotnet "$(MSBuildThisFileDirectory)/Audacia.Templating.Typescript.Build.dll"</TsGenFileExe>
+		<TsGenFileExe>dotnet "$(MSBuildThisFileDirectory)/netcoreapp2.0/Audacia.Templating.Typescript.Build.dll"</TsGenFileExe>
 	</PropertyGroup>
 
 	<Target Name="GenerateTypescript" AfterTargets="CoreCompile">
