--- a/Audacia.Templating.Typescript.Build/GenerateTypescript.targets
+++ b/Audacia.Templating.Typescript.Build/GenerateTypescript.targets
@@ -1,7 +1,7 @@
 <!-- GenerateTypescript.targets -->
 <Project>
 	<PropertyGroup>
-		<ConfigFileLocation>$(MSBuildProjectDir)/typescript.transpile.config</ConfigFileLocation>
+		<ConfigFileLocation>$(MSBuildProjectDirectory)/typescript.transpile.config</ConfigFileLocation>
 		<TsGenFileExe>dotnet "$(MSBuildThisFileDirectory)/netcoreapp2.0/Audacia.Templating.Typescript.Build.dll"</TsGenFileExe>
 	</PropertyGroup>
 
