add basic support for generics

--- a/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
+++ b/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
@@ -33,6 +33,9 @@
 	  <None Update="enum.ts">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="generics.ts">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
