--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Output path="test.ts">
+  <Output path="Audacia.Typescript.Transpiler.ts">
     <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.Transpiler.dll">
-    <Namespace name="Audacia.Typescript.Transpiler"/>
-    <Namespace name="Audacia.Typescript.Transpiler.Builders"/>
+      <Namespace name="Audacia.Typescript.Transpiler"/>
+      <Namespace name="Audacia.Typescript.Transpiler.Mappings"/>
     </Input>
   </Output>
-  <Output path="test2.ts">
-    <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.dll">
-    <Namespace name="Audacia.Typescript"/>
-    </Input>
+  <Output path="Audacia.Typescript.ts">
+    <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.dll" />
+  </Output>
+  <Output path="Audacia.Typescript.Tests.ts">
+    <Input name="../Audacia.Typescript.Tests/bin/Debug/netcoreapp2.1/Audacia.Typescript.Tests.dll" />
   </Output>
 </Settings>
