--- a/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.csproj
+++ b/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.csproj
@@ -7,7 +7,7 @@
 		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
 		<Authors>Adam Drewery</Authors>
 		<Company>Audacia</Company>
-		<TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
 	</PropertyGroup>
 
 	<!-- Pack settings -->
