support for xml doc comments- inline cref attributes don't work though.

--- a/Audacia.Typescript/Audacia.Typescript.csproj
+++ b/Audacia.Typescript/Audacia.Typescript.csproj
@@ -12,4 +12,13 @@
     <Copyright>Copyright © Audacia 2017</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DocumentationFile>bin\Debug\netstandard2.0\Audacia.Typescript.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>bin\Release\netstandard2.0\Audacia.Typescript.xml</DocumentationFile>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+  </PropertyGroup>
+
 </Project>
