--- a/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.nuspec
+++ b/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.nuspec
@@ -10,6 +10,7 @@
     <description>Generates typescript from .NET Types</description>
   </metadata>
   <files>
+    <file src="_._" target="lib/netcoreapp1.0/" />
     <file src="Audacia.Typescript.Transpiler.targets" target="build/netcoreapp2.0/Audacia.Typescript.Transpiler.targets" />
     <file src="GenerateTypescript.targets" target="tools/" />
     <file src="$publishdir$\netcoreapp2.0\**\*" target="tools/netcoreapp2.0/" />
