add placeholder for .net framework 1.1

--- a/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.nuspec
+++ b/Audacia.Typescript.Transpiler/Audacia.Typescript.Transpiler.nuspec
@@ -11,6 +11,7 @@
   </metadata>
   <files>
     <file src="_._" target="lib/netcoreapp1.0/" />
+    <file src="_._" target="lib/net11/" />
     <file src="Audacia.Typescript.Transpiler.targets" target="build/netcoreapp2.0/Audacia.Typescript.Transpiler.targets" />
     <file src="GenerateTypescript.targets" target="tools/" />
     <file src="$publishdir$\netcoreapp2.0\**\*" target="tools/netcoreapp2.0/" />
