--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <CyclicReferences handling="Ignore" feedback="Ignore" />
   <Output path="Audacia.Typescript.Transpiler.ts">
     <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.Transpiler.dll">
       <Namespace name="Audacia.Typescript.Transpiler"/>
