--- a/Audacia.Typescript.Transpiler/GenerateTypescript.targets
+++ b/Audacia.Typescript.Transpiler/GenerateTypescript.targets
@@ -2,7 +2,8 @@
 <Project>
 	<PropertyGroup>
 		<ConfigFileLocation>$(MSBuildProjectDirectory)/transpiler.config</ConfigFileLocation>
-		<TsGenFileExe>dotnet "$(MSBuildThisFileDirectory)/netcoreapp2.0/Audacia.Typescript.Transpiler.dll"</TsGenFileExe>
+		<TsGenFileExe Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp' OR '$(TargetFrameworkIdentifier)' == '.NETStandard'">dotnet "$(MSBuildThisFileDirectory)/netcoreapp2.0/Audacia.Typescript.Transpiler.dll"</TsGenFileExe>
+		<TsGenFileExe Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">"$(MSBuildThisFileDirectory)/net46/Audacia.Typescript.Transpiler.exe"</TsGenFileExe>
 	</PropertyGroup>
 
 	<Target Name="GenerateTypescript" AfterTargets="CoreCompile">
