- support configuring what enum values should be ouputted as - default to string output types - updated  example.config to not fall over by default

--- a/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
+++ b/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
@@ -27,10 +27,13 @@
 	  <None Update="property.ts">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="numberEnum.ts">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	  <None Update="typescriptFile.ts">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Update="enum.ts">
+	  <None Update="stringEnum.ts">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	  <None Update="generics.ts">
