- Added header comment to output - Removed types from example.config

--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -3,9 +3,7 @@
   <CyclicReferences handling="Ignore" feedback="Ignore" />
   <Output path="Audacia.Typescript.ts">
     <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.dll">
-      <Namespace name="Audacia.Typescript.Collections">
-        <TypeName name="ArgumentList"></TypeName>
-      </Namespace>
+      <Namespace name="Audacia.Typescript.Collections"/>
       <Namespace name="Audacia.Typescript"/>
     </Input>
   </Output>
