Fix a bug where generic types weren't being imported when provided a type argument.

--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -7,4 +7,8 @@
       <Namespace name="Audacia.Typescript"/>
     </Input>
   </Output>
+  <Output path="Audacia.Typescript.Transpiler.ts">
+    <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.Transpiler.dll">
+    </Input>
+  </Output>
 </Settings>
