--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -3,6 +3,7 @@
   <CyclicReferences handling="Ignore" feedback="Ignore" />
   <Output path="Audacia.Typescript.ts">
     <Input name="bin/Debug/netcoreapp2.0/Audacia.Typescript.dll">
+      <Properties initialize="true"/>
       <Namespace name="Audacia.Typescript.Collections"/>
       <Namespace name="Audacia.Typescript"/>
     </Input>
