Add release stage

--- a/build.yaml
+++ b/build.yaml
@@ -9,5 +9,14 @@ resources:
       type: git
       name: Audacia/Audacia.Build.Templates
       
-steps:
-- template: steps/build/netcore/signed-package.yaml@templates
+stages:
+
+- stage: Build
+  displayName: Build
+  jobs:
+    - template: jobs/build/netcore/signed-package.yaml@templates
+
+- stage: Release
+  displayName: Release
+  jobs:
+    - template: jobs/release/netcore/public-package.yaml@templates
