Add a test assembly and a logger class.

--- a/Audacia.Typescript.Transpiler/example.config
+++ b/Audacia.Typescript.Transpiler/example.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Settings>
   <Transpile path="">
+    <Assembly name="../Audacia.Typescript.Transpiler.Examples/bin/Debug/netstandard2.0/Audacia.Typescript.Transpiler.Examples.dll" />
     <Assembly name="bin/Debug/netcoreapp2.0/Audacia.Typescript.Transpiler.dll" />
     <Assembly name="bin/Debug/netcoreapp2.0/Audacia.Typescript.dll">
       <Properties initialize="true"/>
