--- a/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
+++ b/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
@@ -5,6 +5,7 @@
 		<Version>2.1.0.0</Version>
 		<AssemblyVersion>2.1.0.0</AssemblyVersion>
 		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
+		<ProjectGuid>{22EECA4F-676F-4E89-A097-8EE5CA4A4A10}</ProjectGuid>
 	</PropertyGroup>
 
 	<ItemGroup>
