--- a/build.yaml
+++ b/build.yaml
@@ -7,8 +7,11 @@ resources: { repositories: [ { repository: templates, type: git, name: Audacia/A
 stages:
   - stage: Build
     displayName: Build
-    jobs: [ { template: pipelines/build/signed-nuget-package.job.yaml@templates } ]
+    jobs:
+      - template: pipelines/build/signed-nuget-package.job.yaml@templates
 
   - stage: Release
     displayName: Release
-    jobs: [ { template: pipelines/release/public-nuget-package.job.yaml@templates } ]
+    condition: and(succeeded(), and(not(eq(variables['Build.Reason'], 'PullRequest')), not(eq(variables['Build.Reason'], 'Schedule'))))
+    jobs:
+      - template: pipelines/release/public-nuget-package.job.yaml@templates
