--- a/Audacia.Typescript/Audacia.Typescript.csproj
+++ b/Audacia.Typescript/Audacia.Typescript.csproj
@@ -12,6 +12,8 @@
     <TargetFramework>netstandard1.1</TargetFramework>
     <RepositoryUrl>https://github.com/audaciaconsulting/Audacia.Typescript</RepositoryUrl>
     <ProjectGuid>{E81506BB-EFDE-4417-A3B0-02299A93C1FC}</ProjectGuid>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>true</DelaySign>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
