--- a/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
+++ b/Audacia.Typescript.Tests/Audacia.Typescript.Tests.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>
-		<Version>2.1.0.0</Version>
-		<AssemblyVersion>2.1.0.0</AssemblyVersion>
-		<AssemblyInformationalVersion>2.1.0.0</AssemblyInformationalVersion>
+		<TargetFramework>net6.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+		<Version>3.0.0.0</Version>
 		<ProjectGuid>{22EECA4F-676F-4E89-A097-8EE5CA4A4A10}</ProjectGuid>
 	</PropertyGroup>
 
