--- a/build.yaml
+++ b/build.yaml
@@ -12,7 +12,7 @@ resources:
       endpoint: shared-github
       name: audaciaconsulting/Audacia.Build
 pool:
-  - vmImage: windows-2022
+  vmImage: windows-2022
 
 stages:
 - stage: Stage_Build
